unpackaged/main/default/objects/Abono_en_cuenta__c/Abono_en_cuenta__c.object-meta.xml
<CustomObject>
    <label>Abono en cuenta</label>
    <nameField>
        <displayFormat>AB-{00000000}</displayFormat>
        <label>Nombre de Abonos en cuenta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abonos en cuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>