unpackaged/main/default/objects/Abono_en_cuenta__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <referenceTo>Asunto__c</referenceTo>
    <relationshipLabel>Abonos en cuenta</relationshipLabel>
    <relationshipName>Abonos_en_cuenta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>