unpackaged/main/default/objects/Abono_en_cuenta__c/fields/Esquema_de_Salida__c.field-meta.xml
<CustomField>
    <fullName>Esquema_de_Salida__c</fullName>
    <description>Esquema de Salida del Abono</description>
    <inlineHelpText>Esquema de Salida del Abono</inlineHelpText>
    <label>Esquema de Salida</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finiquito a Plazos</fullName>
            </value>
            <value>
                <fullName>Pago Parcial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>