unpackaged/main/default/objects/Abono_en_cuenta__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Fecha del abono</description>
    <inlineHelpText>Fecha del abono</inlineHelpText>
    <label>Fecha</label>
    <required>true</required>
    <type>Date</type>
</CustomField>