unpackaged/main/default/objects/Abono_en_cuenta__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <description>Importe del Abono</description>
    <inlineHelpText>Importe del Abono</inlineHelpText>
    <label>Importe</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>